resolving collisions implemented

--- a/viscousFluidDynamics.vcxproj
+++ b/viscousFluidDynamics.vcxproj
@@ -135,6 +135,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\Core\SquareMesh.cpp" />
     <ClCompile Include="src\Systems\ParticleSimulation.cpp" />
     <ClCompile Include="src\Core\InstancedMesh.cpp" />
     <ClCompile Include="src\Systems\ParticleSystem.cpp" />
@@ -149,6 +150,7 @@
     <ClCompile Include="src\Core\Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Core\SquareMesh.h" />
     <ClInclude Include="src\Systems\ParticleSimulation.h" />
     <ClInclude Include="src\Core\InstancedMesh.h" />
     <ClInclude Include="src\Systems\ParticleSystem.h" />
@@ -167,6 +169,10 @@
   <ItemGroup>
     <None Include="src\Shaders\basic.frag" />
     <None Include="src\Shaders\basic.vert" />
+    <None Include="src\Shaders\boundingBox.frag" />
+    <None Include="src\Shaders\boundingBox.vert" />
+    <None Include="src\Shaders\interactionRadius.frag" />
+    <None Include="src\Shaders\interactionRadius.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
