--- a/viscousFluidDynamics.vcxproj.filters
+++ b/viscousFluidDynamics.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClCompile Include="src\Core\SquareMesh.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Core\ComputeShader.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Game.h">
@@ -101,6 +104,12 @@
     <ClInclude Include="src\Core\SquareMesh.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Core\ComputeShader.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Core\OpenGLBuffer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Shaders\basic.vert" />
@@ -109,5 +118,6 @@
     <None Include="src\Shaders\interactionRadius.frag" />
     <None Include="src\Shaders\boundingBox.vert" />
     <None Include="src\Shaders\boundingBox.frag" />
+    <None Include="src\Shaders\Compute\applyGravity.comp" />
   </ItemGroup>
 </Project>
