double density relaxation implemented on the gpu

--- a/viscousFluidDynamics.vcxproj
+++ b/viscousFluidDynamics.vcxproj
@@ -175,6 +175,9 @@
     <None Include="src\Shaders\boundingBox.frag" />
     <None Include="src\Shaders\boundingBox.vert" />
     <None Include="src\Shaders\Compute\applyGravity.comp" />
+    <None Include="src\Shaders\Compute\doubleDensityRelaxation.comp" />
+    <None Include="src\Shaders\Compute\updateVelocity.comp" />
+    <None Include="src\Shaders\include\common.glsl" />
     <None Include="src\Shaders\interactionRadius.frag" />
     <None Include="src\Shaders\interactionRadius.vert" />
   </ItemGroup>
