--- a/viscousFluidDynamics.vcxproj.filters
+++ b/viscousFluidDynamics.vcxproj.filters
@@ -119,5 +119,9 @@
     <None Include="src\Shaders\boundingBox.vert" />
     <None Include="src\Shaders\boundingBox.frag" />
     <None Include="src\Shaders\Compute\applyGravity.comp" />
+    <None Include="src\Shaders\Compute\doubleDensityRelaxation.comp" />
+    <None Include="src\Shaders\Compute\updateVelocity.comp" />
+    <None Include="src\Shaders\include\common.glsl" />
+    <None Include="src\Shaders\Compute\resetGrid.comp" />
   </ItemGroup>
 </Project>
