bitonic sort particles

--- a/viscousFluidDynamics.vcxproj
+++ b/viscousFluidDynamics.vcxproj
@@ -175,6 +175,8 @@
     <None Include="src\Shaders\boundingBox.frag" />
     <None Include="src\Shaders\boundingBox.vert" />
     <None Include="src\Shaders\Compute\applyGravity.comp" />
+    <None Include="src\Shaders\Compute\bitonicMerge.comp" />
+    <None Include="src\Shaders\Compute\partialBitonicSort.comp" />
     <None Include="src\Shaders\Compute\doubleDensityRelaxation.comp" />
     <None Include="src\Shaders\Compute\resetGrid.comp" />
     <None Include="src\Shaders\Compute\updateVelocity.comp" />
