--- a/viscousFluidDynamics.vcxproj.filters
+++ b/viscousFluidDynamics.vcxproj.filters
@@ -123,5 +123,7 @@
     <None Include="src\Shaders\Compute\updateVelocity.comp" />
     <None Include="src\Shaders\include\common.glsl" />
     <None Include="src\Shaders\Compute\resetGrid.comp" />
+    <None Include="src\Shaders\Compute\partialBitonicSort.comp" />
+    <None Include="src\Shaders\Compute\bitonicMerge.comp" />
   </ItemGroup>
 </Project>
