--- a/viscousFluidDynamics.vcxproj
+++ b/viscousFluidDynamics.vcxproj
@@ -176,6 +176,7 @@
     <None Include="src\Shaders\boundingBox.vert" />
     <None Include="src\Shaders\Compute\applyGravity.comp" />
     <None Include="src\Shaders\Compute\bitonicMerge.comp" />
+    <None Include="src\Shaders\Compute\findOffsets.comp" />
     <None Include="src\Shaders\Compute\partialBitonicSort.comp" />
     <None Include="src\Shaders\Compute\doubleDensityRelaxation.comp" />
     <None Include="src\Shaders\Compute\resetGrid.comp" />
