more stable boundry handling

--- a/imgui.ini
+++ b/imgui.ini
@@ -7,6 +7,10 @@ Pos=45,40
 Size=136,117
 
 [Window][Fluid Parameters]
-Pos=36,65
-Size=413,165
+Pos=46,50
+Size=600,400
+
+[Window][Box parameters]
+Pos=71,461
+Size=421,108
 
