--- a/viscousFluidDynamics.vcxproj.filters
+++ b/viscousFluidDynamics.vcxproj.filters
@@ -169,5 +169,6 @@
     <None Include="src\Shaders\Compute\partialBitonicSort.comp" />
     <None Include="src\Shaders\Compute\bitonicMerge.comp" />
     <None Include="src\Shaders\Compute\findOffsets.comp" />
+    <None Include="src\Shaders\include\matrixTransformations.glsl" />
   </ItemGroup>
 </Project>
